# football-sim

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: clock.cpp  clock.h  game.cpp  game.h  gamestates.cpp  gamestates.h  outcome.cpp  outcome.h  play.cpp  playcall.h  states.h  team.cpp  team.h  userteam.cpp  utils.cpp  utils.h
src/learn/: classify.cpp  learn.h  model.h  train.cpp  training_set.csv
